// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChipSelector > renders correctly with chip 1 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with chip 100 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with chip 1000 selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 3px solid rgb(255, 255, 255); box-shadow: 0 0 15px rgba(255,255,255,0.8), inset 0 0 10px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1.15) translateY(-5px); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`ChipSelector > renders correctly with no chip selected 1`] = `
<div
  style="display: flex; gap: 15px; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); border-radius: 50px; border: 2px solid rgb(85, 85, 85); box-shadow: 0 5px 15px rgba(0,0,0,0.5); justify-content: center; align-items: center;"
>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(136, 136, 136), rgb(68, 68, 68)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(211, 47, 47), rgb(154, 0, 7)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    5
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(56, 142, 60), rgb(27, 94, 32)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    25
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(25, 118, 210), rgb(13, 71, 161)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    100
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(156, 39, 176), rgb(106, 27, 154)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(0, 0, 0); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    500
  </div>
  <div
    style="width: 50px; height: 50px; border-radius: 50%; background: radial-gradient(circle at 30% 30%, rgb(255, 235, 59), rgb(251, 192, 45)); border: 2px dashed rgba(255, 255, 255, 0.5); box-shadow: 0 2px 5px rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 14px; cursor: pointer; transform: scale(1); transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);"
  >
    1000
  </div>
</div>
`;

exports[`SessionClock > renders correctly with initial state 1`] = `
<div
  style="background: linear-gradient(135deg, rgb(26, 26, 26) 0%, rgb(14, 14, 14) 100%); border-width: 2px; border-style: solid; border-color: rgb(254, 203, 0) rgb(212, 175, 55) rgb(138, 110, 32); border-image: none; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.9), 0 0 20px rgba(212, 175, 55, 0.2); color: rgb(224, 224, 224); font-family: "Roboto Mono", monospace; display: flex; flex-direction: column; padding: 15px 20px; min-width: 220px; text-align: right; pointer-events: auto; position: relative; z-index: 10;"
>
  <div
    style="color: rgb(212, 175, 55); font-weight: bold; font-size: 2.2rem; margin-bottom: 5px; line-height: 1;"
  >
    12:00:00
  </div>
  <div
    style="font-size: 1rem; color: rgb(170, 170, 170); text-transform: capitalize; margin-bottom: 10px;"
  >
    sábado, 17 de enero
  </div>
  <div
    style="border-top: 1px solid rgb(68, 68, 68); padding-top: 10px; display: flex; justify-content: space-between; color: rgb(136, 136, 136); font-size: 0.9rem; font-weight: bold;"
  >
    <span>
      SESIÓN:
    </span>
    <span
      style="color: rgb(255, 255, 255); font-size: 1.2rem;"
    >
      00:00:00
    </span>
  </div>
</div>
`;

exports[`SpinCounter > renders correctly with initial state 1`] = `
<div
  style="background: linear-gradient(135deg, rgb(26, 26, 26) 0%, rgb(14, 14, 14) 100%); border-width: 2px; border-style: solid; border-color: rgb(254, 203, 0) rgb(212, 175, 55) rgb(138, 110, 32); border-image: none; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.9), 0 0 20px rgba(212, 175, 55, 0.2); color: rgb(224, 224, 224); font-family: monospace; text-align: center; min-width: 120px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 10px 15px; position: relative; z-index: 10;"
>
  <div
    style="font-size: 0.7rem; color: rgb(212, 175, 55); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 2px;"
  >
    JUGADAS
  </div>
  <div
    style="font-size: 1.4rem; font-weight: bold; color: rgb(255, 255, 255); text-shadow: 0 0 5px rgba(255,255,255,0.3);"
  >
    42
  </div>
</div>
`;
